test/Fail/Issue4586LetPatternDot.err
Issue4586LetPatternDot.agda:5.12-16: error: [NotAValidLetBinding.NotAValidLetPattern]
Not a valid let pattern
when scope checking let .Set = Set in Set
